--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -1,4 +1,4 @@
-@import url(https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css);
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css);
 @import url(https://use.fontawesome.com/releases/v5.7.0/css/all.css);
 @import url(fonts.css);
 
