Date utils (formatter) + periods wall updated

--- a/pages/html/templates/blog-post-element.html
+++ b/pages/html/templates/blog-post-element.html
@@ -12,7 +12,8 @@
             <div class="d-flex justify-content-between">
                 <h4>%title%</h4>
                 <div>
-                    <span class="px-3 text-muted">
+                    <span class="px-3 text-muted" data-toggle="tooltip" 
+                            data-placement="bottom" title="%modified%">
                         %date%
                     </span>
                     <span class="pl-3 text-success">
