--- a/pages/html/templates/period-list-element.html
+++ b/pages/html/templates/period-list-element.html
@@ -5,11 +5,6 @@
             <button class="btn btn-sm btn-link">
                 Registration
             </button>
-            <!--
-            <button class="btn btn-sm btn-link">
-                <span class="fas fa-info"></span>
-            </button>
-            -->
         </div>
     </div>
     <div class="text-secondary mb-1">
@@ -20,21 +15,20 @@
 
         <span class="fas fa-user" aria-hidden="true"></span>
         <small class="mr-3">
-            Shemplo
+            %author%
         </small>
 
         <span class="fas fa-calendar-week" aria-hidden="true"></span>
         <small class="mr-3">
-            28.07.2019 - 14.09.2020
+            %period%
         </small>
 
         <span class="fas fa-book" aria-hidden="true"></span>
         <small class="mr-3">
-            Registration
+            %status%
         </small>
     </div>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt erat
-        bibendum nunc dapibus sagittis.
-    </p>
+    <div>
+        %description%
+    </div>
 </li>
