Login updated + periods render + dates updated

--- a/pages/html/templates/period-list-element.html
+++ b/pages/html/templates/period-list-element.html
@@ -9,22 +9,22 @@
     </div>
     <div class="text-secondary mb-1">
         <span class="fas fa-calendar-day" aria-hidden="true"></span>
-        <small class="mr-3">
+        <small class="mr-3 ml-1">
             %issued%
         </small>
 
         <span class="fas fa-user" aria-hidden="true"></span>
-        <small class="mr-3">
+        <small class="mr-3 ml-1">
             %author%
         </small>
 
         <span class="fas fa-calendar-week" aria-hidden="true"></span>
-        <small class="mr-3">
+        <small class="mr-3 ml-1">
             %period%
         </small>
 
         <span class="fas fa-book" aria-hidden="true"></span>
-        <small class="mr-3">
+        <small class="mr-3 ml-1">
             %status%
         </small>
     </div>
