Some updates in period page

--- a/pages/html/templates/period-list-element.html
+++ b/pages/html/templates/period-list-element.html
@@ -9,28 +9,32 @@
         </div>
     </div>
     <div class="text-secondary mb-1">
-        <span data-toggle="tooltip" data-placement="bottom" title="Issued date">
+        <span data-toggle="tooltip" data-placement="bottom" title="Issued date"
+                class="cursor-none">
             <span class="fas fa-calendar-day" aria-hidden="true"></span>
             <small class="mr-3 ml-1">
                 %issued%
             </small>
         </span>
 
-        <span data-toggle="tooltip" data-placement="bottom" title="Author">
+        <span data-toggle="tooltip" data-placement="bottom" title="Author"
+                class="cursor-none">
             <span class="fas fa-user" aria-hidden="true"></span>
             <small class="mr-3 ml-1">
                 %author%
             </small>
         </span>
 
-        <span data-toggle="tooltip" data-placement="bottom" title="Duration">
+        <span data-toggle="tooltip" data-placement="bottom" title="Duration"
+                class="cursor-none">
             <span class="fas fa-calendar-week" aria-hidden="true"></span>
             <small class="mr-3 ml-1">
                 %period%
             </small>
         </span>
 
-        <span data-toggle="tooltip" data-placement="bottom" title="Status">
+        <span data-toggle="tooltip" data-placement="bottom" title="Status"
+                class="cursor-none">
             <span class="fas fa-book" aria-hidden="true"></span>
             <small class="mr-3 ml-1">
                 %status%
