Period registration page started

--- a/pages/html/templates/group-list-element.html
+++ b/pages/html/templates/group-list-element.html
@@ -1,6 +1,7 @@
 <li class="list-group-item list-group-item-action">
+    <input type="hidden" value="%groupId%" />
     <div class="d-flex justify-content-between">
-        <h5>%title%</h5>
+        <h5>%name%</h5>
         <div>
             <button class="btn btn-sm btn-outline-primary">
                 Join group
