Generation of period registration form done

--- a/pages/html/templates/web-form-title-element.html
+++ b/pages/html/templates/web-form-title-element.html
@@ -1,4 +1,4 @@
-<h5>
-    <span class="%icon% mx-2 my-3"></span>
-    %title%
+<h5 class="my-3">
+    <span class="%icon% mx-2"></span>
+    <span>%title%</span>
 </h5>
