--- a/pages/html/templates/web-form-select-element.html
+++ b/pages/html/templates/web-form-select-element.html
@@ -1,9 +1,13 @@
 <div class="form-group">
     <div class="input-group input-group-sm">
         <div class="input-group-prepend">
-            <span class="input-group-text" style="width: 120px;">%name%</span>
+            <span class="input-group-text" style="width: 120px;">
+                %name%
+            </span>
         </div>
-        <input type="%fieldType%" class="form-control" id="%fieldId%">
+        <select class="form-control" id="%fieldId%">
+            %options%
+        </select>
     </div>
     <div class="small text-secondary ml-2 mt-1 mb-2">
         %comment%
