--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -41,12 +41,11 @@ body {
     position: fixed;
     right   : 0;
     top     : 0;
-    /*bottom  : 0;*/
     width   : 25%;
     z-index : 100;
     
-    overflow-y : auto;
-    padding-top: 5em;
+    overflow-y: auto;
+    margin-top: 5em;
 }
 
 .logo-image {
