--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -30,6 +30,14 @@ body {
     cursor: none;
 }
 
+.bg-white {
+    background-color: white !important;
+}
+
+.bg-whitesmoke {
+    background-color: whitesmoke !important;
+}
+
 
 
 
